service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-health
spec:
  selector:
    app: otus-health
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: scoring
spec:
  selector:
    app: scoring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: comm-gate
spec:
  selector:
    app: comm-gate
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: orders-core
spec:
  selector:
    app: orders-core
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: saga-core
spec:
  selector:
    app: saga-core
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: document-generator
spec:
  selector:
    app: document-generator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
