ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: grafana
              port: 
                number: 3000
